assets/css/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Press+Start+2P&display=swap');

:root {
  /*---------- FONTS STYLE ----------*/
  --content-text: 'Montserrat', sans-serif;
  --display-text: 'Press Start 2P', cursive;

  /*---------- COLOURS ----------*/
  --black: #000000;
  --oxford-blue: #000026;
  --baby-white: #FDFFFC;
  --pink: #f45bc9;
  --hover-bg: #c3d0e9;
  --crisler-blue-light: #7249ef;
  --medium-slate-blue: #7968ff;
  --crisler-blue: #3B0CCA;
  --lavender-web: #F1ECFD;
  --periwinkle: #D7C8F9;
  --mauve: #BDA5F6;
  --payne-grey: #637081;
  --correct: #28a745;
  --incorrect: #dc3545;
}

/* Removes margins and padding */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* Full screen */
html,
body {
  height: 100%;
}

/* Background image with a background colour to show if the image cannot load*/
body {
  background-color: var(--oxford-blue);
  font-family: var(--content-text);
  text-align: center;
}

.main-background {
  background: url("../images/background.jpg") no-repeat center center;
  background-size: cover;
}

/*---------- LOGO SECTION ----------*/
.heading {
  text-align: center;
  font-size: 2.5rem;
  margin-top: 1.5em;
}

.logo {
  height: 100px;
  -webkit-filter: drop-shadow(5px 5px 5px var(--crisler-blue));
  filter: drop-shadow(5px 5px 5px var(--crisler-blue));
  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎮</text></svg>") 16 0, auto;
  /*!emojicursor.app*/
}

/*---------- HEADINGS & TEXT ----------*/
h2 {
  text-align: center;
}

p {
  text-align: center;
  font-size: 1rem;
  padding: 0.5em 2em;
  line-height: 1.6em;
}

a {
  text-decoration: none;
}

.intro-text>h2,
#modal-content>h2 {
  font-family: var(--display-text);
  padding: 1em 0em 1.2em;
}

.intro-text {
  padding: 2em 2em;
}

#question,
#select-heading {
  padding: 2em 2em;
}

#select-heading {
  font-family: var(--display-text);
  line-height: 1.5em;
}

/*---------- CONTAINERS ----------*/
/* 
Flex container*/
.flex-container {
  display: flex;
  flex-direction: column;
  height: auto;
  justify-content: center;
  align-content: center;
}

/* Outer Container */
.outer-container {
  width: 60%;
  margin: auto;
  color: var(--baby-white);
  border-radius: 1.5rem;
  -webkit-filter: drop-shadow(5px 5px 5px var(--crisler-blue));
  filter: drop-shadow(5px 5px 5px var(--crisler-blue));

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* Button Groups */
.buttons-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 100%;
}

/*---------- BUTTON STYLING ----------*/
.btn {
  font-family: var(--content-text);
  text-align: center;
  padding: 0.75rem;
  background-color: var(--oxford-blue);
  border-radius: 2rem;
  color: var(--baby-white);
  margin: 0.3rem;
  box-shadow: -2px -2px 5px var(--baby-white) inset;
  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎮</text></svg>") 16 0, auto;
  /*!emojicursor.app*/
  font-size: 1.5rem;
  margin: 0.5rem;
}

.end-btns {
  width: 60%;
}

.hover-button:hover,
.choice-container:hover {
  box-shadow: -2px -2px 5px rgba(86, 185, 235, 0.5) inset;
  transform: translateY(-0.1rem);
  transition: transform 150ms;
  background-color: var(--hover-bg);
  color: var(--black);
  font-weight: bold;
}

.btn[disabled]:hover {
  cursor: not-allowed;
  box-shadow: none;
  transform: none;
}

.btn-width {
  width: 80%;
}

/* for buttons A, B, C, D*/
.choice-container {
  display: flex;
}

.choice-prefix {
  background-color: var(--baby-white);
  opacity: 0.7;
  color: var(--oxford-blue);
  font-weight: bold;
  border-radius: 2em 0em 0em 2em;
  margin: -0.75em;
  display: flex;
  align-items: center;
}

.choice-text {
  width: 100%;
  /*to load a new question when clicking it*/
}

/* FORMS */
form {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

input {
  margin-bottom: 1rem;
  width: 20rem;
  padding: 1.5rem;
  font-size: 1.8rem;
  border: none;
  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
  border-radius: 15px;
}

input::placeholder {
  color: #aaa;
}

/*---------- CORRECT & INCORRECT FEEDBACK CLASSES ----------*/
/*important so this overwrites the hover effect*/
.correct {
  background-color: var(--correct) !important;
}

.incorrect {
  background-color: var(--incorrect) !important;
}

/*---------- MODALS ----------*/
/* tutorial - https://www.youtube.com/watch?v=XH5OW46yO8I*/

#modal-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--payne-grey);
  opacity: 0;
  /* This hides the content in the modal*/
  pointer-events: none;
  transition: opacity 0.5s ease;
}

/* Change the modal opacity to be visible so it will show the content and set it back to default*/
#modal-container.show {
  opacity: 1;
  pointer-events: auto;
}

/* Add a border with rounded corners and padding around the modal content */
#modal-content {
  width: 80%;
  border: var(--mauve) 5px solid;
  border-radius: 1.5rem;
  padding: 2rem;
  color: var(--baby-white);
  text-align: center;
}

/* Add margin to top of close modal button */
#close-modal {
  margin-top: 3rem;
}

/* ---------- SCOREBOARD ----------*/
#scoreboard {
  display: flex;
  justify-content: space-between;
}

.scoreboard-prefix {
  text-align: center;
  font-size: 1.2rem;
  font-weight: bold;
}

.scoreboard-main-text {
  text-align: center;
}

.player-score,
#final-score {
  font-family: var(--display-text);
}

/*---------- LOADER ----------*/
#loader {
  border: 1.6rem solid white;
  border-radius: 50%;
  border-top: 1.6rem solid #56a5eb;
  width: 12rem;
  height: 12rem;
  animation: spin 2s linear infinite;

  /* To position the loader*/
  position: absolute;
  margin: auto;
  top: 500%;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50vh;
}

/*---------- TO HIDE CONTENT ----------*/
.hidden {
  display: none;
}

/*---------- HIGH SCORES ----------*/
#high-scores {
  padding-top: 6em;
}

.trophy {
  font-weight: 900;
  padding: 2rem;
  color: #ffffff;
}

#high-score-list {
  list-style: none;
  padding-left: 0;
  margin-bottom: 4rem;
}

.player-score {
  padding: 2em;
}

#final-score {
  padding: 0.5em;
}

.high-score {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

.high-score:hover {
  transform: scale(1.025);
}

/*---------- 404 PAGE ----------*/
.background-error {
  background: url("../images/404-bg.webp") no-repeat center center;
  background-color: var(--oxford-blue);
  background-size: cover;
}

.error {
  text-align: center;
  width: 50%;
  height: auto;
  max-width: 100%;
  justify-items: center;
}

.outer-container>h1 {
  font-family: var(--display-text);
  font-size: 2em;
  margin-bottom: 1em;
}

/*---------- MEDIA QUERIES ----------*/
@media screen and (max-width: 1400px) {

  .intro-text {
    font-size: 80%;
    width: 90%;
  }

  #select-heading {
    font-size: 120%;
  }

  .btn-container {
    width: 90%;
  }

  .btn-width {
    width: 80%;
  }

  .btn {
    font-size: 120%;
  }

  .heading {
    margin-top: 2em;
  }
}

@media screen and (max-width: 1200px) {}

.intro-text {
  font-size: 75%;
  width: 90%;
}

@media screen and (max-width: 1100px) {
  .main-background {
    background: url("../images/bg-365x747px.png") no-repeat center center;
    background-size: cover;
  }

  .btn-container {
    width: 80%;
  }

  #question {
    padding: 1em 1em;
  }

  .logo {
    height: 2.2em;
  }

  .intro-text>h2 {
    padding: .8em 0em 1em;
    line-height: 1.5;
  }

  .outer-container {
    width: 80%;
  }

  .scoreboard-prefix {
    font-size: 1em;
  }

  .scoreboard-main-text {
    font-size: 1.5em;
  }

  .end-btns {
    width: 50%;
  }

  #high-scores {
    padding-top: 1em;
  }
}

@media screen and (max-width: 900px) {
  .error-page-container {
    padding-top: 15%;
  }

  .intro-text {
    width: 90%;
  }

  input {
    width: 90%;
  }
}

@media screen and (max-width: 850px) {
  .intro-text {
    width: 80%;
  }
}

@media screen and (max-width: 765px) {
  .outer-container {
    width: 75%;
  }

  .intro-text {
    padding: 0em 2em;
  }

  .intro-text>h2 {
    font-size: 1.4em;
    line-height: 1.5em;
  }

  .btn-container {
    width: 80%;
  }

  .btn-width {
    width: 70%;
  }

  .intro-text {
    font-size: 90%;
  }

  input {
    font-size: 90%;
  }
}

@media screen and (max-width: 700px) {
  .scoreboard-prefix {
    font-size: unset;
  }

  .outer-container {
    width: 70%
  }

  .intro-text>p {
    padding: .8em 0em 1em;
    line-height: 160%;
  }

  p {
    font-size: 95%;
  }

  .heading {
    margin-top: 1em;
  }

  #select-heading {
    font-size: 110%;
  }
}

/* Medium-small screens */
@media screen and (max-width: 550px) {
  .main-background {
    background: var(--oxford-blue);
  }

  .logo {
    height: 1.7em;
  }

  h2 {
    font-size: 1.2rem;
  }

  .intro-text>h2 {
    font-size: 1.2em;
    line-height: 1.em;
  }

  .intro-text {
    padding: 1em 1em;
  }
}

@media screen and (max-width: 420px) {
  .logo {
    height: 1.45em;
  }

  p {
    font-size: 0.8rem;
  }

  .outer-container {
    width: 90%;
  }

  .btn-width {
    width: 80%;
  }

  .btn {
    font-size: 1rem;
  }

  .intro-text>h2,
  #modal-content>h2,
  #final-score {
    padding: .5em 0em .7em;
    line-height: 160%;
    font-size: 1.2em;
  }

  .error-page-container {
    padding-top: 50%;
  }

  .intro-text>p {
    padding: 0.7em 0em 1em;
    line-height: 150%;
  }
}

/* Small screens */
@media screen and (max-width: 375px) {

  .intro-text>h2,
  #modal-content>h2 {
    padding: .4em 0em .6em;
    line-height: 150%;
  }

  #question,
  .intro-text>h2 {
    font-size: clamp(1rem, 0.1765rem + 3.7647vw, 3rem);
  }

  #modal-content {
    padding: 0.1em;
    width: 90%;
  }

  .btn {
    padding: 0.7rem;
  }

  #close-modal {
    margin-top: 1rem;
  }

  #high-scores {
    padding-top: 3em;
  }


}

@media screen and (max-width: 320px) {
  .logo {
    height: 1.3em
  }

  .high-score {
    font-size: 1.3rem;
    margin: 0.5rem;
  }

  #final-score {
    font-size: 1.2em;
  }

  #modal-content {
    padding: 0.5rem;
  }

  h2 {
    font-size: 1rem;
  }

  p {
    font-size: 0.6rem;
  }

  .btn {
    padding: 0.5rem;
  }

  #high-scores {
    padding-top: 2em;
  }

  .intro-text>p {
    line-height: 160%;
  }
}

